# rgb-clock

./: CMakeLists.txt  ProjectHome.md
Dab/: Antenne.txt  https---ugreen.eu-product-ugreen-dab-board-.url
build-x86/: toolchain-x86.cmake
libraries/: build
libraries/buildlibs/: CMakeLists-tinyxml.txt
linux/: rgbclock
linux/Arch/: install.txt
linux/Arch/dwa-131/: 8192cu.ko
linux/Arch/dwa-131/core/: rtw_pwrctrl.c
linux/Arch/root/: settings.xml
linux/Stretch/: rgbclock.service
linux/Wheezy/: Install.txt
linux/Wheezy/etc/init.d/: rgbclock
pcb/: OpmNieuwePCB-2.txt  OpmNieuwePCB.txt
pcb/RGBClock/: BOM-Farnell-Digikey.xlsx  Displayboard.brd  Displayboard.lbr  Displayboard.pro  Displayboard.sch  Leddriverboard.brd  Leddriverboard.lbr  Leddriverboard.s#1  Leddriverboard.sch  Mainboard.brd  Mainboard.lbr  Mainboard.pro  Mainboard.sch  Mainboard.scr  eagle.epf
pcb/RGBClock/Gerber/: Displayboard.bor  Displayboard.cmp  Displayboard.drd  Displayboard.dri  Displayboard.gpi  Displayboard.plc  Displayboard.sol  Displayboard.stc  Displayboard.sts  Leddriverboard.bor  Leddriverboard.cmp  Leddriverboard.drd  Leddriverboard.dri  Leddriverboard.plc  Leddriverboard.sol  Leddriverboard.stc  Leddriverboard.sts  Mainboard.bor  Mainboard.drd  Mainboard.dri  Mainboard.gpi  Mainboard.plc  Mainboard.sol  Mainboard.stc  Mainboard.sts
pcb/RGBClock/Sketchup/: Mainboard.skp
pcb/pwm-prototype/: RGBLedDimmer.lbr  RGBLedDimmer.skp
rgbclock/: .autotools  .cproject  .project  AlarmClock.cpp  AlarmClock.h  AlarmManager.cpp  AlarmManager.h  AlarmObserverIf.h  AlarmSync.h  CMakeLists.txt  Config.cpp  Config.h  Findgflags.cmake  Light.cpp  Light.h  bootstrap  main.cpp
rgbclock/LcdDriver/: Commands.h  LcdDriver.ino  verdana.cpp  verdana.h  workspace.code-workspace
rgbclock/RgbApp/: .cproject  .project  CMakeLists.txt
rgbclock/RgbApp/src/: main.cpp
rgbclock/RgbLib/: .cproject  .project  AlarmClock.h  AlarmManager.cpp  CMakeLists.txt  Config.h
rgbclock/RgbLib/lib/: ClockDisplay.h  FMReceiver.h  Fonts.h  LCDBacklight.cpp  LCDisplay.h  MPR121.h  MainboardControl.h  PwmLedDriver.cpp  PwmLedDriver.h  Radio.cpp  RadioObserverIf.h  UpDownDeviceIf.h
rgbclock/RgbLib/src/: AlarmClock.cpp  AlarmClock.h  AlarmManager.cpp  AlarmManager.h  AlarmObserverIf.h  Config.cpp  Config.h
rgbclock/RgbLib/src/lib/: AutoPowerOffTimer.cpp  ClockDisplay.cpp  ClockDisplay.h  DABCommands.h  DABInfo.h  DABReceiver.cpp  DABReceiver.h  DABReceiverDef.h  DABService.h  FMReceiver.cpp  FMReceiver.h  FastLCDisplay.cpp  FastLCDisplay.h  FastLCDisplayCommands.h  FontType.h  I2C.cpp  I2C.h  IOExpander.h  LCDisplay.cpp  LCDisplay.h  LCDisplayIf.h  Light.h  MainboardControl.cpp  MainboardControl.h  RDSInfo.h  RTC.cpp  Radio.cpp  Radio.h  RadioObserverIf.h  SI4735.h  SPI.cpp  SPI.h  Si4684.cpp  Si4684.h  Si4684Const.h  SystemClock.cpp  SystemClock.h  SystemClockIf.h  UpDownTimer.cpp  Utils.cpp  (+3 more)
rgbclock/RgbLib/src/lib/cmd/: DABCommands.h  DABComponentInfo.h  DABDigiradStatus.h  DABDigitalServiceData.h  DABFrequencyList.h  DABFunctionInfo.h  DABPartInfo.h  DABReadProperty.h  DABRssiInfo.h  DABServiceList.h  DABStatus.h  DABSysState.h
rgbclock/RgbTest/: .cproject  .project  CMakeLists.txt  notempty
rgbclock/RgbTest/src/: AlarmManagerTest.cpp  ConfigTests.cpp  ConfigTests.h  DABCommandsTest.cpp  DABReceiverTest.cpp  FastLCDisplayTest.cpp  Si4684Test.cpp  SpiTest.cpp  UtilsTest.cpp  main.cpp
rgbclock/RgbTest/testfiles/: alarms.xml  settingsFile.xml
rgbclock/build-arm/: toolchain-arm.cmake
rgbclock/lib/: AutoPowerOffDeviceIf.h  AutoPowerOffTimer.cpp  AutoPowerOffTimer.h  ClockDisplay.cpp  ClockDisplay.h  FMReceiver.cpp  FMReceiver.h  Fonts.h  I2C.cpp  I2C.h  IOExpander.cpp  IOExpander.h  Keyboard.cpp  Keyboard.h  KeyboardObserverIf.h  LCDBacklight.cpp  LCDBacklight.h  LCDisplay.cpp  LCDisplay.h  Light.cpp  Light.h  LightSensor.cpp  LightSensor.h  MPR121.h  MainboardControl.cpp  MainboardControl.h  PwmLedDriver.cpp  PwmLedDriver.h  RDSInfo.h  RTC.cpp  RTC.h  Radio.cpp  Radio.h  RadioObserverIf.h  RgbLed.cpp  RgbLed.h  UpDownTimer.cpp  UpDownTimer.h  WatchdogFeederIf.h
rgbclock/libraries/: build  toolchain-arm.cmake
rgbclock/tinyxml/: ticpp.cpp  ticpp.h
tests/: .cproject  ClockDisplay.cpp  ClockDisplay.h  FMReceiver.cpp  FMReceiver.h  Fonts.h  I2C.cpp  I2C.h  IOExpander.cpp  Keyboard.cpp  Keyboard.h  LCDisplay.cpp  LCDisplay.h  LightSensor.cpp  LightSensor.h  RTC.h  Radio.cpp  Radio.h  RgbLed.cpp  RgbLed.h  SI4735.h  main.cpp
trunk/linux/: rgbclock
trunk/linux/Arch/: install.txt
trunk/linux/etc/: resolv.conf  rsyslog.conf
trunk/pcb/RGBClock/: BOM-Farnell-Digikey.xlsx  Displayboard.brd  Displayboard.lbr  Displayboard.sch  Leddriverboard.brd  Leddriverboard.lbr  Leddriverboard.sch  Mainboard.brd  Mainboard.lbr  Mainboard.sch  Mainboard.scr  eagle.epf
trunk/pcb/pwm-prototype/: RGBLedDimmer.brd  RGBLedDimmer.sch
trunk/rgbclock/: .autotools  .cproject  .project  AlarmClock.cpp  AlarmClock.h  AlarmManager.cpp  AlarmManager.h  AlarmObserverIf.h  AlarmSync.cpp  AlarmSyncListenerIf.h  Config.cpp  Config.h  Light.cpp  Light.h  main.cpp
trunk/rgbclock/lib/: ClockDisplay.cpp  ClockDisplay.h  FMReceiver.cpp  FMReceiver.h  I2C.cpp  I2C.h  IOExpander.cpp  IOExpander.h  Keyboard.cpp  Keyboard.h  KeyboardObserverIf.h  LCDBacklight.cpp  LCDBacklight.h  LCDisplay.cpp  LCDisplay.h  Light.cpp  Light.h  LightSensor.cpp  LightSensor.h  MPR121.h  MainboardControl.cpp  MainboardControl.h  PwmLedDriver.cpp  RTC.cpp  RTC.h  Radio.cpp  Radio.h  RadioObserverIf.h  RgbLed.cpp  RgbLed.h  WatchdogFeederIf.h
trunk/tests/: .cproject  .project  ClockDisplay.cpp  ClockDisplay.h  FMReceiver.cpp  FMReceiver.h  Fonts.h  I2C.cpp  I2C.h  IOExpander.h  Keyboard.cpp  LCDisplay.cpp  LCDisplay.h  LightSensor.cpp  RDSInfo.h  RTC.cpp  RTC.h  Radio.cpp  Radio.h  RgbLed.cpp  RgbLed.h  SI4735.h  main.cpp
(+66 files in other folders)
